--- a/ImageProcessingApp/app/src/main/AndroidManifest.xml
+++ b/ImageProcessingApp/app/src/main/AndroidManifest.xml
@@ -5,8 +5,8 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:icon="@drawable/metalprocessing"
+        android:label="Procesamiento de Imagenes"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
