--- a/ImageProcessingApp/app/build.gradle
+++ b/ImageProcessingApp/app/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.wang.avi:library:2.1.3'
     testCompile 'junit:junit:4.12'
 
 }
