final commit :heart:

--- a/ImageProcessingApp/app/src/main/AndroidManifest.xml
+++ b/ImageProcessingApp/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/metalprocessing"
+        android:icon="@drawable/p_icon_01"
         android:label="Procesamiento de Imagenes"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
